src/test/ui/rust-2018/extern-crate-idiomatic-in-2018.stderr
error: unused extern crate
  --> $DIR/extern-crate-idiomatic-in-2018.rs:12:1
   |
LL | extern crate edition_lint_paths;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ If I were you, I would simply remove it
   |
note: lint level defined here
  --> $DIR/extern-crate-idiomatic-in-2018.rs:9:9
   |
LL | #![deny(rust_2018_idioms)]
   |         ^^^^^^^^^^^^^^^^
   = note: `#[deny(unused_extern_crates)]` implied by `#[deny(rust_2018_idioms)]`

error: aborting due to previous error

